@@ -1,5 +1,10 @@
 2005-11-05  Dennis Cranston  <dennis_cranston@yahoo.com>
 
+	* gsearchtool.c: (gsearch_equal_func): Change comparision
+	to be case insensitive.
+
+2005-11-05  Dennis Cranston  <dennis_cranston@yahoo.com>
+
 	* gnome-search-tool.schemas.in: Add a key for storing the 
 	order of the columns.
 	* gsearchtool-callbacks.c: (columns_changed_cb): Save changes
